// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Forms / Toggle Checked Story 1`] = `
<div
  aria-checked={true}
  className="toggle toggle--checked "
  onClick={[Function]}
  onKeyPress={[Function]}
  role="checkbox"
  tabIndex={0}
>
  <input
    checked={true}
    className="toggle__input"
    onClick={[Function]}
    tabIndex={-1}
    type="checkbox"
  />
</div>
`;

exports[`Storyshots Forms / Toggle Demo 1`] = `
<div
  aria-checked={false}
  className="toggle "
  onClick={[Function]}
  onKeyPress={[Function]}
  role="checkbox"
  tabIndex={0}
>
  <input
    checked={false}
    className="toggle__input"
    onClick={[Function]}
    tabIndex={-1}
    type="checkbox"
    value="demo"
  />
</div>
`;

exports[`Storyshots Forms / Toggle Disabled Story 1`] = `
<div
  aria-disabled={true}
  className="toggle "
  onClick={[Function]}
  onKeyPress={[Function]}
  role="checkbox"
  tabIndex={0}
>
  <input
    className="toggle__input"
    disabled={true}
    onClick={[Function]}
    tabIndex={-1}
    type="checkbox"
  />
</div>
`;

exports[`Storyshots Forms / Toggle Read Only Story 1`] = `
<div
  aria-readonly={true}
  className="toggle "
  onClick={[Function]}
  onKeyPress={[Function]}
  role="checkbox"
  tabIndex={0}
>
  <input
    className="toggle__input"
    onClick={[Function]}
    readOnly={true}
    tabIndex={-1}
    type="checkbox"
  />
</div>
`;

exports[`Storyshots Forms / Toggle Unchecked 1`] = `
<div
  className="toggle "
  onClick={[Function]}
  onKeyPress={[Function]}
  role="checkbox"
  tabIndex={0}
>
  <input
    className="toggle__input"
    onClick={[Function]}
    tabIndex={-1}
    type="checkbox"
  />
</div>
`;
